--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>History</li>
-                <li>Media</li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Media</a></li>
             </ul>
         </nav>
     </header>
