Add section structure and placeholder text

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
             </ul>
         </nav>
     </header>
+    <section>Home - intro, me and basic info about Sayyiduna Umar</section>
+    <section>Brief history - based on just me and Wiki and MBC series</section>
+    <section>about MBC series and message etc and see if anything else online</section>
 </body>
 </html>
