--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Sayyiduna Umar ibn al-Khattab</title>
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <header>
@@ -16,8 +18,8 @@
             </ul>
         </nav>
     </header>
-    <section>Home - intro, me and basic info about Sayyiduna Umar</section>
-    <section>Brief history - based on just me and Wiki and MBC series</section>
-    <section>about MBC series and message etc and see if anything else online</section>
+    <section id="home">Home - intro, me and basic info about Sayyiduna Umar</section>
+    <section id="history">Brief history - based on just me and Wiki and MBC series</section>
+    <section id="media">about MBC series and message etc and see if anything else online</section>
 </body>
 </html>
