Import google fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <title>Sayyiduna Umar ibn al-Khattab</title>
     <link rel="stylesheet" href="assets/css/index.css">
+    
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic:wght@700&family=Poppins&family=Roboto:wght@300&display=swap');
+    </style>
+
 </head>
 <body>
     <header>
