Add head banner and nav styling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
     <header>
+        <div>
+            <h1><span>Umar</span>عمر</h1>
+        </div>
+        <div id="nav-block">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,6 +26,7 @@
                 <li><a href="#">Media</a></li>
             </ul>
         </nav>
+        </div>
     </header>
     <section id="home">Home - intro, me and basic info about Sayyiduna Umar</section>
     <section id="history">Brief history - based on just me and Wiki and MBC series</section>
