--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1><span>Umar</span>عمر</h1>
         </div>
         <div id="nav-block">
+            <div id="nav-center">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,6 +27,7 @@
                 <li><a href="#">Media</a></li>
             </ul>
         </nav>
+            </div>
         </div>
     </header>
     <section id="home">Home - intro, me and basic info about Sayyiduna Umar</section>
