--- a/index.html
+++ b/index.html
@@ -30,8 +30,23 @@
             </div>
         </div>
     </header>
-    <section id="home">Home - intro, me and basic info about Sayyiduna Umar</section>
-    <section id="history">Brief history - based on just me and Wiki and MBC series</section>
-    <section id="media">about MBC series and message etc and see if anything else online</section>
+    <section id="home">
+        <div class="text-info">
+            <h3>Intro</h3>
+            <p>The second caliph of Islam, has many monikers. 
+                I like to refer to him as Sayyiduna Umar ibn al-Khattab, may God be pleased with him. As a muslim I have many reasons for loving him.
+                Additonally,  we share a name as I am also called Umar.
+            </p>
+        </div>
+    </section>
+    <section id="history">
+        Brief history - based on just me and Wiki and MBC series
+    </section>
+    <section id="media">
+        <div id="mbc-omar-trailer">
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        about MBC series and message etc and see if anything else online
+    </section>
 </body>
 </html>
