resolve font family application error

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="umar">
             <h1><span>Umar</span>عمر</h1>
         </div>
         <div id="nav-block">
@@ -32,21 +32,42 @@
     </header>
     <section id="home">
         <div class="text-info">
-            <h3>Intro</h3>
-            <p>The second caliph of Islam, has many monikers. 
+            <h2>Intro</h2>
+            <p>The second caliph of Islam, has many monikers. He is called Al-Farouq: one who differentiates right from wrong clearly. As with all people, loved and respected in Eastern cultures in particular,
+                many honorifics can and are applied to him. For example, Saayiduna, which means our master, this is also applied to many of the companions of the Prophet, peace be upon him, and also,
+                many of the Prophets and Messengers sent from God, peace be upon them all. It is also common to say of the companions of the Prophet Muhammad, peace be upon him, may God be pleased with him or her or them depending on the context.
                 I like to refer to him as Sayyiduna Umar ibn al-Khattab, may God be pleased with him. As a muslim I have many reasons for loving him.
                 Additonally,  we share a name as I am also called Umar.
             </p>
+            <p>
+                He is well-known for his justice and, at times, harshness. But equally known for his mercy and kind-heartedness. 
+                He is considered to be the first or one of the first rulers in history to implement a child benefit where people are given an allowance to support children. 
+                There is also a famous story around this as initially the allowance could only be claimed for weaned children. However, one night while patrolling the city, 
+                he heard a baby crying and when he learned that the reason was due to early weaning in order for the family to claim the child benefit allowance and support themselves
+                he was overcome by emotion and promptly changed the rules to prevent this.
+            </p>
+            <p>
+                I have grown up hearing stories of this great personality and believe more people other than Muslims should also know more about him.
+                And would love to also.
+            </p>
+        </div>
+        <div class="external-links-or-images">
+
         </div>
     </section>
     <section id="history">
+        <div class="text-info">
         Brief history - based on just me and Wiki and MBC series
+        </div>
     </section>
     <section id="media">
+        <div class="text-info">
+        about MBC series and message etc and see if anything else online
+        </div>
+        
         <div id="mbc-omar-trailer">
             <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        about MBC series and message etc and see if anything else online
     </section>
 </body>
 </html>
