Complete intro section with image

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
             </p>
             <p>
                 I have grown up hearing stories of this great personality and believe more people other than Muslims should also know more about him.
-                And would love to also.
+                And would love to also. Recently, I learned of a historical tv series produced by MBC about the life of Umar and found it both entertaining and informative.
+                The image to the right is the Calip's name written in decorative calligraphy often found adorning mosques.
             </p>
         </div>
         <div class="external-links-or-images">
-
+            <img src="assets/images/900px-Rashidun_Caliphs_Umar_ibn_Al-Khattāb_-_عُمر_بن_الخطّاب_ثاني_الخلفاء_الراشدين.svg.png">
         </div>
     </section>
     <section id="history">
