--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Media</a></li>
+                <li><a href="#history">History</a></li>
+                <li><a href="#media">Media</a></li>
             </ul>
         </nav>
             </div>
