Add content for History section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home">
         <div class="text-info">
             <h2>Intro</h2>
-            <p>The second caliph of Islam, has many monikers. He is called Al-Farouq: one who differentiates right from wrong clearly. As with all people, loved and respected in Eastern cultures in particular,
+            <p>The second Caliph of Islam, has many monikers. He is called Al-Farouq: one who differentiates right from wrong clearly. As with all people, loved and respected in Eastern cultures in particular,
                 many honorifics can and are applied to him. For example, Saayiduna, which means our master, this is also applied to many of the companions of the Prophet, peace be upon him, and also,
                 many of the Prophets and Messengers sent from God, peace be upon them all. It is also common to say of the companions of the Prophet Muhammad, peace be upon him, may God be pleased with him or her or them depending on the context.
                 I like to refer to him as Sayyiduna Umar ibn al-Khattab, may God be pleased with him. As a muslim I have many reasons for loving him.
@@ -58,7 +58,45 @@
     </section>
     <section id="history">
         <div class="text-info">
-        Brief history - based on just me and Wiki and MBC series
+            <h2>History</h2>
+            <h3>Early Life</h3>
+            <p>
+                Umar grew up under a strict father: al-Khattab. They were the chiefs of the small 'Adiy clan of Quraish - the ruling tribe of Mecca at the time. He grew to be a large
+                man, some reports putting him at over 7 feet tall. He was the pride of Quraysh and nominated it's Ambassador both for his impressive stature and fighting ability and
+                uncommon literacy and eloquence.
+            </p>
+            <h3>Early years of Islam</h3>
+            <p>
+                In the earlier years of Islam, when the Prophet Muhammad, peace be upon him, initially announced the message of Islam. Umar was amongst the foremost of his oponents.
+                As chief of the 'Adiy clan after his father, he implemented harsh punishments (truly torture by beatings and similar) against the people of his clan who had accepted the message and become the first Muslims.
+                This was the agreement made between the chiefs of Quraysh that each chief would punish his own people so as to avoid conflict between themselves.
+            </p>
+            <h3>Acceptance of Islam</h3>
+            <p>
+                After several years as the message of Islam grew amongst the people of Mecca, and more and more people abandoned the many gods of Quraysh. Umar decided that 
+                enough was enough. Everything he had tried with the other chiefs of Quraysh had not slowed the growth of Islam. He decided that he must kill the Prophet, peace be upon him. 
+                However, on his way he came across someone who informed him that his own sister and brother-in-law were Muslim, so he headed to them instead. In his rage, he beat them until 
+                his sister bled, at which point he felt remorse and stopped. As he paused and thought, he was able to hear the message of Islam for the first time. And thus, the staunchest 
+                enemy of the religion became it's staunchest believer and added his strength to the message of Islam.
+            </p>
+            <h3>Years as a Muslim</h3>
+            <p>
+                He spent the next years as a Muslim and a strong supporter of the message of the oneness of God and the commandments of the Qur'an and the Messenger, peace be upon him. 
+                He became a close companion of the Messenger, peace be upon him. This companionship tempered his character such that when the time came and the First Caliph, Abu Bakr, may God be pleased with him, 
+                was near to death and indicated that Umar should be the Caliph after him the other senior companions were able to accept. Their initial misgivings due to his sometimes harsh 
+                character were also laid to rest in the early days of his reign as he encouraged criticism. Amongst the initial Caliphs his reign was the longest and most peaceful. The expansion 
+                of the areas ruled by the Caliph was largely peaceful. A beautiful example is when he travelled to Jerusalem to accept the surrender of the city. On his arrival no one could 
+                tell who was the Caliph as he was dressed the same as everyone else. And indeed had been taking turns with his assistant to ride upon their camel and it was actually the assistant's 
+                turn on their approach to the city. Beside the Church of the Holy Sepulchre there is a famous mosque called the mosque of Umar. This is because when the Patriarch invited him 
+                to pray within the Church he refused out of fear that Muslims of the future may wish to make the Church into a mosque.
+            </p>
+        </div>
+        <div class="external-links-or-images">
+            <img src="assets/images/pexels-david-mceachan-71241.jpg">
+            <img src="assets/images/pexels-haley-black-2087387.jpg">
+            <img src="assets/images/pexels-mauricio-artieda-610533.jpg">
+            <img src="assets/images/pexels-pixabay-262780.jpg">
+            <img src="assets/images/Mohammad_adil_rais-Caliph_Umar's_empire_at_its_peak_644.png">
         </div>
     </section>
     <section id="media">
