Add text to final media section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
             <p>
                 I have grown up hearing stories of this great personality and believe more people other than Muslims should also know more about him.
-                And would love to also. Recently, I learned of a historical tv series produced by MBC about the life of Umar and found it both entertaining and informative.
+                And would love to also. Recently, I learned of a historical tv series produced by the Middle East Broadcasting Corporation (MBC) about the life of Umar and found it both entertaining and informative.
                 The image to the right is the Calip's name written in decorative calligraphy often found adorning mosques.
             </p>
         </div>
@@ -101,11 +101,13 @@
     </section>
     <section id="media">
         <div class="text-info">
-        about MBC series and message etc and see if anything else online
+            <h2>Media</h2>
+            There is in fact not much media featuring the second Caliph. Even 'The Message' a movie released in 1976 about the history of Islam did not feature any of the 
+            foremost companions out of respect. Therefore the 30 episode 'Omar series' released by MBC was slightly controversial in that it did depict these great people.
         </div>
         
         <div id="mbc-omar-trailer">
-            <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 </body>
