Resolve styling for desktop viewing

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
         </div>
         <div class="external-links-or-images">
-            <img src="assets/images/900px-Rashidun_Caliphs_Umar_ibn_Al-Khattāb_-_عُمر_بن_الخطّاب_ثاني_الخلفاء_الراشدين.svg.png">
+            <img src="assets/images/900px-Rashidun_Caliphs_Umar_ibn_Al-Khattāb_-_عُمر_بن_الخطّاب_ثاني_الخلفاء_الراشدين.svg.png" alt="A green circle with gold Calligraphy">
         </div>
     </section>
     <section id="history">
@@ -91,23 +91,25 @@
                 to pray within the Church he refused out of fear that Muslims of the future may wish to make the Church into a mosque.
             </p>
         </div>
-        <div class="external-links-or-images">
-            <img src="assets/images/pexels-david-mceachan-71241.jpg">
-            <img src="assets/images/pexels-haley-black-2087387.jpg">
-            <img src="assets/images/pexels-mauricio-artieda-610533.jpg">
-            <img src="assets/images/pexels-pixabay-262780.jpg">
-            <img src="assets/images/Mohammad_adil_rais-Caliph_Umar's_empire_at_its_peak_644.png">
+        <div class="external-links-or-images" id="history-images">
+            <img src="assets/images/pexels-david-mceachan-71241.jpg" alt="The pyramids of Giza" id="egypt">
+            <!-- <img src="assets/images/pexels-mauricio-artieda-610533.jpg" alt="the dome of the rock jerusalem" id="gold-dome">
+            <img src="assets/images/Mohammad_adil_rais-Caliph_Umar's_empire_at_its_peak_644.png" alt="map the middle east with grean shading showing the height of the area ruled by Umar" id="map"> -->
         </div>
     </section>
     <section id="media">
         <div class="text-info">
             <h2>Media</h2>
-            There is in fact not much media featuring the second Caliph. Even 'The Message' a movie released in 1976 about the history of Islam did not feature any of the 
+            <p>There is in fact not much media featuring the second Caliph. Even 'The Message' a movie released in 1976 about the history of Islam did not feature any of the 
             foremost companions out of respect. Therefore the 30 episode 'Omar series' released by MBC was slightly controversial in that it did depict these great people.
+            </p>
+            <div id="mbc-omar-trailer">
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
-        
-        <div id="mbc-omar-trailer">
-            <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="external-links-or-images">
+            <img src="assets/images/Mohammad_adil_rais-Caliph_Umar's_empire_at_its_peak_644.png" alt="map the middle east with grean shading showing the height of the area ruled by Umar" id="map">
+            <a href="https://en.wikipedia.org/wiki/Umar">Umar: The Wikipedia Page</a>
         </div>
     </section>
 </body>
