Style media queries for various screen sizes for basic adjustments

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <div class="external-links-or-images">
             <img src="assets/images/Mohammad_adil_rais-Caliph_Umar's_empire_at_its_peak_644.png" alt="map the middle east with grean shading showing the height of the area ruled by Umar" id="map">
-            <a href="https://en.wikipedia.org/wiki/Umar">Umar: The Wikipedia Page</a>
+            <a href="https://en.wikipedia.org/wiki/Umar" id="wiki">Umar: The Wikipedia Page</a>
         </div>
     </section>
 </body>
