Change frameborder attribute in iframe and replace with CSS as per W3C validator

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             foremost companions out of respect. Therefore the 30 episode 'Omar series' released by MBC was slightly controversial in that it did depict these great people.
             </p>
             <div id="mbc-omar-trailer">
-                <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/l-vFh_q03kw" title="Omar Series Official Trailer" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="external-links-or-images">
